🐛 fix project type on mobile

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -232,6 +232,10 @@ a.project {
     line-height: 22px;
 }
 
+.project-type {
+    display: inline-block;
+}
+
 // manifesto
 
 .manifesto-wrapper {
